force-app/main/default/objects/Candidate__c/fields/Aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_number__c</fullName>
    <label>Aadhar number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>