force-app/main/default/objects/Candidate__c/fields/B_Tech_Discipline__c.field-meta.xml
<CustomField>
    <fullName>B_Tech_Discipline__c</fullName>
    <label>B.Tech Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>