force-app/main/default/objects/Candidate__c/fields/Current_Employeer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employeer__c</fullName>
    <label>Current Employeer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>