force-app/main/default/objects/Candidate__c/fields/Educational_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Educational_Qualification__c</fullName>
    <label>Educational Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>B.COM</fullName>
            </value>
            <value>
                <fullName>BTECH</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>M.COM</fullName>
            </value>
            <value>
                <fullName>M.TECH</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>