force-app/main/default/objects/Candidate__c/fields/Is_Us_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_Us_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Us Citizen</label>
    <type>Checkbox</type>
</CustomField>