force-app/main/default/objects/Candidate__c/fields/No_of_Years_with_CCX__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years_with_CCX__c</fullName>
    <formula>(TODAY() - Date_Of_Joining__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Years with CCX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>