force-app/main/default/objects/Candidate__c/fields/Total_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>