force-app/main/default/objects/Candidate__c/validationRules/Aadhar_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( Aadhar_number__c , &quot;^[2-9]{4}\\s[0-9]{4}\\s[0-9]{4}&quot;) )</errorConditionFormula>
    <errorDisplayField>Aadhar_number__c</errorDisplayField>
    <errorMessage>Enter the numer in this format:9999 9999 9999</errorMessage>
</ValidationRule>