force-app/main/default/objects/Candidate__c/validationRules/SSN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( SSN__c , &quot;[0-9]{3}[\\-][0-9]{2}[\\-][0-9]{4}&quot;) )</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>Enter the digits in the format of:000-00-0000</errorMessage>
</ValidationRule>